# parallel-executor

./: .coverage  .gitignore  README.md  main.py  pyproject.toml  test_executor.py  todo.md
src/parallel_executor/: __init__.py  asynchronous.py  events.py  schemas.py  synchronous.py
