[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "parallel-executor"
version = "0.1.0"
description = "A parallel execution library supporting both async and sync task execution with event emission and callbacks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "pyee>=11.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.0.0"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["parallel_executor*"]

[project.urls]
Homepage = "https://github.com/yourusername/parallel-executor"
Repository = "https://github.com/yourusername/parallel-executor"

[dependency-groups]
dev = [
    "build>=1.3.0",
    "coverage>=7.10.7",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
]
